GNOME Bugzilla – Bug 746348
session: fix session type selection if not explicitly chosen
Last modified: 2015-03-17 14:36:55 UTC
If we read the saved selection from user data, we don't select the right session type. This commit makes sure any time the selection is changed, we check if the session is wayland or X11.
Created attachment 299601 [details] [review] session: fix session type selection if not explicitly chosen
Attachment 299601 [details] pushed as 4bb106f - session: fix session type selection if not explicitly chosen
Created attachment 299602 [details] [review] session: fix typo in previous commit <krnowak> halfline: "if (g_strcmp0 (session_type, session_type) != 0) {" ? <halfline> ahhhhh <halfline> thank you <krnowak> No problem.
Attachment 299602 [details] pushed as 3caf50c - session: fix typo in previous commit