session: fix session type selection if not explicitly chosen

If we read the saved selection from user data, we don't select
the right session type.

This commit makes sure any time the selection is changed, we check
if the session is wayland or X11.

https://bugzilla.gnome.org/show_bug.cgi?id=746348